--- a/src/peerblock/pb.rc
+++ b/src/peerblock/pb.rc
@@ -368,11 +368,13 @@ BEGIN
     EDITTEXT        IDC_MAXHISTORYSIZE,275,108,30,14,ES_AUTOHSCROLL | WS_DISABLED
     CONTROL         "",IDC_MAXHISTORYSIZESPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_ARROWKEYS | WS_DISABLED,301,108,11,14
     LTEXT           "MB",IDC_STATIC,313,108,17,14,SS_CENTERIMAGE
-    GROUPBOX        "Notification",IDC_STATIC,5,134,333,31
-    CONTROL         "Notify On",IDC_NOTIFY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,145,45,12
-    COMBOBOX        IDC_NOTIFYON,61,145,68,73,CBS_DROPDOWNLIST | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Blink tray icon",IDC_BLINKTRAY,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,153,145,60,12
-    CONTROL         "Display notification window",IDC_NOTIFYWINDOW,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,225,145,102,12
+
+    GROUPBOX        "I-Blocklist Subscription",IDC_STATIC,5,134,333,31
+    LTEXT           "Username:",IDC_STATIC,15,148,35,12
+    EDITTEXT        IDC_IBLUSER,53,147,160,12,ES_AUTOHSCROLL
+    LTEXT           "PIN:",IDC_STATIC,232,148,18,12
+    EDITTEXT        IDC_IBLPIN,250,147,80,12,ES_AUTOHSCROLL
+
     LTEXT           "Text:",IDC_STATIC,19,47,18,8
     LTEXT           "Background:",IDC_STATIC,19,58,41,8
     LTEXT           "Text:",IDC_STATIC,113,47,18,8
@@ -414,10 +416,16 @@ BEGIN
     CONTROL         "",IDC_AUTOCLOSETIMESPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_ARROWKEYS | WS_DISABLED,157,95,10,14
     LTEXT           "Seconds",IDC_STATIC,171,96,29,12,SS_CENTERIMAGE
     CONTROL         "Update at startup",IDC_UPDATE_AT_STARTUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,226,96,105,12
-    GROUPBOX        "Miscellaneous",IDC_STATIC,5,123,333,30
+    GROUPBOX        "Miscellaneous",IDC_STATIC,5,123,333,45
     CONTROL         "Always hide tray icon",IDC_HIDETRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,135,84,12
     CONTROL         "Minimize to tray on close",IDC_HIDEONCLOSE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,113,135,95,12
     CONTROL         "Keep PeerBlock on top",IDC_ONTOP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,226,135,105,12
+
+    CONTROL         "Notify On",IDC_NOTIFY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,150,45,12
+    COMBOBOX        IDC_NOTIFYON,61,150,68,73,CBS_DROPDOWNLIST | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Blink tray icon",IDC_BLINKTRAY,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,153,150,60,12
+    CONTROL         "Display notification window",IDC_NOTIFYWINDOW,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,226,150,102,12
+
     PUSHBUTTON      "&Save",IDC_SAVE,5,186,50,14
 END
 
