Added support for new list-update error-codes: - 401 (INCORRECT AUTH) - 402 (SUBSCRIPTION REQUIRED) - 404 (NO SUCH URL) - 419 (SUBSCRIPTION EXPIRED) - 420 (TOO MANY FAILS) - 429 (UPDATE LIMIT EXCEEDED)

--- a/src/peerblock/pb.rc
+++ b/src/peerblock/pb.rc
@@ -926,6 +926,12 @@ BEGIN
     IDS_ABORTED             "Aborted"
     IDS_ERRORCONTACTINGWHY  "Error Contacting URL: %1%"
     IDS_UNEXPCONTACTINGWHY  "Unexpected Response Contacting URL: %1%"
+    IDS_UPDATELIMITEXCEEDED "Update limit exceeded"
+	IDS_INCORRECTAUTH       "Incorrect username/pin"
+	IDS_SUBSCRIPTIONEXPIRED "Subscription expired"
+	IDS_SUBSCRIPTIONREQUIRED "Subscription required"
+	IDS_NOSUCHURL           "Invalid list specified"
+	IDS_TOOMANYFAILS        "Too many incorrect sign-ins"
     IDS_DNLISTFAILEDVERIFY  "List verification failed: 0 elements"
     IDS_CLOSEX              "&Close - %1%"
     IDS_HIDINGTEXT          "PeerBlock has hidden your tray menu.  You will have to re-launch PeerBlock to bring it back."
