--- a/src/peerblock/pb.vcxproj.filters
+++ b/src/peerblock/pb.vcxproj.filters
@@ -292,4 +292,7 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="peerblock.manifest" />
+  </ItemGroup>
 </Project>
