Removed not-in-use "Display notification window" on blocks setting, and fixed it so that clicking on the "Notify On" checkbox once again enables/disables the related controls on the Settings 2 page.

--- a/src/peerblock/pb.rc
+++ b/src/peerblock/pb.rc
@@ -419,7 +419,7 @@ BEGIN
     CONTROL         "Notify On",IDC_NOTIFY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,150,45,12
     COMBOBOX        IDC_NOTIFYON,61,150,68,73,CBS_DROPDOWNLIST | WS_DISABLED | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Blink tray icon",IDC_BLINKTRAY,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,153,150,60,12
-    CONTROL         "Display notification window",IDC_NOTIFYWINDOW,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP,226,150,102,12
+    CONTROL         "Display notification window",IDC_NOTIFYWINDOW,"Button",BS_AUTOCHECKBOX | WS_DISABLED | WS_TABSTOP & (~WS_VISIBLE),226,150,102,12
     PUSHBUTTON      "&Save",IDC_SAVE,5,186,50,14
 END
 
