--- a/src/lib/libp2p/libp2p.vcxproj.filters
+++ b/src/lib/libp2p/libp2p.vcxproj.filters
@@ -46,7 +46,7 @@
     <ClInclude Include="src\stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\utf8.h">
+    <ClInclude Include="include\p2p\utf8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
